--- a/src/options.html
+++ b/src/options.html
@@ -7,13 +7,14 @@
     <title>Simple New Tab URL Options</title>
     <script src="./options.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="shortcut icon" href="redirect.png" type="image/x-icon">
 </head>
 
 <body class="options">
     <h1>Simple New Tab URL Options</h1>
     <p>
         <label for="url">
-            New Tab URL: <input type="text" id="url" name="url" autofocus/>
+            New Tab URL: <input type="text" id="url" name="url" placeholder="about:blank" autofocus/>
         </label>
     </p>
     <div id="permission_warning" style="display: none;">
@@ -39,12 +40,12 @@
     </p>
     <hr>
     <p>
-        <em>Please report any issues on this project's <a href="https://github.com/zach-adams/simple-new-tab-url">Github repo</a></em>
+        <em>Please report any issues on this project's <a href="https://github.com/Gibdos/simple-new-tab-url">Github repo</a></em>
     </p>
     <p>
         <code>
             Version <span id="version"></span><br>
-            Icon "redo" by Mohamed Riyaz Ali <a href="https://thenounproject.com/term/redo/1175677/" target="_blank">from the Noun Project</a>
+            Icon "Undo" & "Call Split" by <a href="https://github.com/google/material-design-icons" target="_blank">Material Design</a>
         </code>
     </p>
 </body>
